# yobot_simplecontrol

./: .gitmodules  CMakeLists.txt  test_cube.gcode
include/: pid.h  robot.h  robot_model.h  servo.h  youbot_arm.h
robot_description/: youbot.urdf
src/: pid.cpp  robot_model.cpp  servo.cpp  youbot_arm.cpp
test/: test_controllers.cpp  test_kinematic.cpp  test_robot.cpp  test_sensorless_2dof.cpp  test_serial.cpp  test_servo.cpp  test_trj.cpp
trajectories/: youbot_tr_0.8.csv
